--- a/languages/lw-product-swatches.pot
+++ b/languages/lw-product-swatches.pot
@@ -2,20 +2,20 @@
 # This file is distributed under the GPL-2.0-or-later.
 msgid ""
 msgstr ""
-"Project-Id-Version: Product Swatches for WooCommerce Light @@VersionNumber@@\n"
+"Project-Id-Version: Product Swatches Light @@VersionNumber@@\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/lw-product-swatches-light\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2023-03-30T14:50:46+02:00\n"
+"POT-Creation-Date: 2023-04-12T15:12:57+02:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: WP-CLI 2.6.0\n"
 "X-Domain: lw-product-swatches\n"
 
 #. Plugin Name of the plugin
-msgid "Product Swatches for WooCommerce Light"
+msgid "Product Swatches Light"
 msgstr ""
 
 #. Description of the plugin
@@ -73,7 +73,7 @@ msgstr ""
 
 #. translators: %1$s is replaced with "string"
 #: classes/class-installer.php:28
-msgid "<strong>Product Swatches for WooCommerce Light could not be activated!</strong> Please <a href=\"%1$s\">install and activate WooCommerce</a> first."
+msgid "<strong>Product Swatches Light could not be activated!</strong> Please <a href=\"%1$s\">install and activate WooCommerce</a> first."
 msgstr ""
 
 #: classes/class-wc-settings-tab.php:29
