fixed missing translation files

--- a/languages/product-swatches-light-de_DE.po
+++ b/languages/product-swatches-light-de_DE.po
@@ -3,10 +3,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Product Swatches for WooCommerce Light 1.0.0\n"
-"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/lw-product-"
-"swatches-light\n"
-"POT-Creation-Date: 2023-04-12T15:12:57+02:00\n"
-"PO-Revision-Date: 2023-04-12 15:13+0200\n"
+"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/product-swatches-"
+"light\n"
+"POT-Creation-Date: 2023-10-26T14:12:18+02:00\n"
+"PO-Revision-Date: 2023-10-26 14:13+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: de_DE\n"
@@ -14,7 +14,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 3.1\n"
+"X-Generator: Poedit 3.3.2\n"
 "X-Domain: lw-product-swatches\n"
 
 #. Plugin Name of the plugin
