--- a/languages/product-swatches-light.pot
+++ b/languages/product-swatches-light.pot
@@ -3,16 +3,16 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Product Swatches Light @@VersionNumber@@\n"
-"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/lw-product-swatches-light\n"
+"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/product-swatches-light\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2023-04-12T15:12:57+02:00\n"
+"POT-Creation-Date: 2023-10-26T14:12:18+02:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: WP-CLI 2.6.0\n"
-"X-Domain: lw-product-swatches\n"
+"X-Domain: product-swatches-light\n"
 
 #. Plugin Name of the plugin
 msgid "Product Swatches Light"
